gccida/c2/gen_split_1182
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/insn-emit.c:15204:30: error: use of undeclared identifier 'machine_mode'
v1 = ix86_force_to_memory( ( machine_mode)*( ( unsigned __int8 *)operands[2] + 2), operands[2]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/insn-emit.c:15206:30: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_fmt_e( FLOAT, ( machine_mode)*( ( unsigned __int8 *)*operands + 2), v1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/insn-emit.c:15210:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)operands[3], 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/insn-emit.c:15210:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)operands[3], 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/insn-emit.c:15211:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[3]), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/insn-emit.c:15211:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[3]), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/insn-emit.c:15216:26: error: use of undeclared identifier 'machine_mode'
ix86_free_from_memory( ( machine_mode)*( ( unsigned __int8 *)operands[2] + 2)); 
                         ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_1182/src/obj/insn-emit.o] Error 1
